<resources>

    <!--Common string resources -->
    <string name="main_app_name">Synthesizer Control</string>
    <string name="common_start_task_btn_toggle_on">Start</string>
    <string name="common_start_task_btn_toggle_off">Stop</string>

    <string name="common_device_status_connected">device connected</string>
    <string name="common_device_status_found">device found</string>
    <string name="common_device_status_idle">idle</string>
    <string name="common_device_status_disconnected">device is disconnected</string>
    <string name="common_device_status_constant">constant mode</string>
    <string name="common_device_status_schedule">schedule mode</string>
    <string name="common_device_status_freqscan">frequency scan</string>

    <!--Fragment titles-->
    <string name="main_constant_title">Constant mode</string>
    <string name="main_scheduler_title">Schedule mode</string>
    <string name="main_dialog_device_unplugged_title">Device have been unplugged!</string>
    <string name="main_dialog_device_unplugged_message">Sorry, device have been unplugged</string>
    <string name="main_dialog_device_unplugged_cancel_btn">OK!</string>

    <!--Action bar resources -->
    <string name="action_bar_status_title">Current status:</string>
    <string name="action_bar_frequency_title">FREQUENCY:</string>
    <string name="action_bar_frequency_default">0.0</string>
    <string name="action_bar_frequency_units">MHz</string>
    <string name="action_bar_status_default">unknown status</string>
    <string name="action_bar_menu_stop_service">Stop service</string>
    <string name="action_bar_menu_restart_application">Restart</string>

    <!--Constant fragment resources-->
    <string name="const_fragment_title">Constant mode</string>
    <string name="const_enter_data">Enter frequency value in MHz:</string>
    <string name="const_btn_apply_frequency">Apply</string>
    <string name="const_msg_device_found">The device was found and initialized</string>
    <string name="const_msg_frequency_input_err">Frequency input error</string>
    <string name="const_msg_frequency_range_err">Frequency value must be in range 35 MHz - 4.4 GHz</string>
    <string name="const_msg_device_disconnected">Device has been disconnected</string>
    <string name="const_msg_no_device">No device present</string>

    <!--Scheduler fragment resources-->
    <string name="scheduler_mode_title">Schedule</string>
    <string name="scheduler_btn_add_item">Add item</string>
    <string name="scheduler_menu_entry_delete_item">Delete item</string>
    <string name="scheduler_menu_entry_edit_item">Edit item</string>
    <string name="scheduler_btn_start">Apply</string>
    <string name="schedule_list_header_frequency">Frequency (Mhz)</string>
    <string name="schedule_list_header_time">Time (sec)</string>
    <string name="scheduler_btn_read_file">Read</string>
    <string name="scheduler_btn_write_file">Write</string>
    <string name="scheduler_btn_hint_read_file">Press to read list from file</string>
    <string name="scheduler_toast_err_schedule_empty">Schedule task list is empty</string>
    <string name="scheduler_checkbox_title">cycle</string>
    <string name="schedule_toast_task_done">Task done!</string>

    <string-array name="operation_modes">
        <item>Constant mode</item>
        <item>Schedule mode</item>
        <item>Frequency scan mode</item>
    </string-array>

    <!--Add item to schedule activity resources-->
    <string name="additem_title_activity">Edit item</string>
    <string name="additem_title_enter_frequency">Enter Frequency in MHz:</string>
    <string name="additem_title_enter_time">Enter time of operating:</string>
    <string name="additem_tile_hours">hours:</string>
    <string name="additem_title_minutes">minutes:</string>
    <string name="additem_title_seconds">seconds:</string>
    <string name="additem_btn_apply">Apply</string>
    <string name="additem_msg_frequency_incorrect">Enter value in the range 35 MHz - 4.4 GHz</string>
    <string name="additem_msg_time_incorrect">Enter value in the range 1 sec - 6 hours</string>
    <string name="additem_msg_parse_error">Some fields are filled incorrect</string>

    <!--BoardManagerService service resourses-->
    <string name="bms_notif_title">Board manager</string>
    <string name="bms_notif_content_title">Current status: </string>
    <string name="bms_notif_subcont_title">Frequency (MHz):</string>
    <string name="bms_notif_subcont_none">none</string>
    <string name="bms_notif_subcont_plase_tap">Please, give a proper permission than tap to connect!</string>
    <string name="title_activity_read_schedule">Read schedule task list</string>

    <!--Read data from csv file Activity resources-->
    <string name="read_title_schedule">Read schedule from csv file</string>
    <string name="read_title_freq_scan">Read frequency scan task list from csv file</string>
    <string name="read_btn_title">Open file</string>
    <string name="read_dialog_error_title">An error occurred</string>
    <string name="read_dialog_error_no_storage">Please check the availability of the external storage and try again</string>
    <string name="read_dialog_error_no_folder">No directory found on SD card</string>
    <string name="read_dialog_error_no_storage_okbutton">OK</string>
    <string name="read_toast_error_select_entry">Please, select file. Than press Open File.</string>
    <string name="read_dialog_error_parse_error">Error with data on line </string>
    <string name="read_dialog_error_frequency_range">Frequency is out of the range 35 Mhz to 4.4 GHz on line</string>
    <string name="read_dialog_error_time_range">Time is out of the range 1 sec - 6 hours on line</string>
    <string name="read_dialog_error_frequency_step_range">Frequency step is out of range 1 KHz to 1 GHz</string>
    <string name="read_dialog_error_time_step_range">Time step is out of the range 1 ms - 6 hours</string>
    <string name="read_dialog_error_file_empty">Selected file is empty</string>



    <string name="action_settings">Settings</string>

    <!--WriteSceduleActivity resourses-->
    <string name="write_title_main">Write data to csv file</string>
    <string name="write_dialog_error_zero_array">No data to proceed</string>
    <string name="write_schedule_explanation_title">Write schedule task list to csv file</string>
    <string name="write_freq_scan_explanation_title">Write frequency scan task list to CVS file</string>
    <string name="write_schedule_explanation_directory">File will be saved to SynthControl/Schedule directory on SDcard 0</string>
    <string name="write_freq_scan_explanation_directory">File will be saved to SynthControl/FrequencyScan directory on SDcard0</string>
    <string name="write_explanation_file_name">Enter file name:</string>
    <string name="write_file_btn_title">Write</string>
    <string name="write_dialog_error_no_storage">Please check the availability of the external storage and try again</string>
    <string name="write_dialog_error_no_folder">No directory SynthControl found on SD card. New directory created.</string>
    <string name="write_toast_empty_file_name">File name is empty</string>
    <string name="write_dialog_error_io_error">IO Error occurred</string>
    <string name="write_dialog_over_title">Overwrite existing file?</string>
    <string name="write_dialog_over_message_begin">File</string>
    <string name="write_dialog_over_message_end">exists. Overwrite?</string>
    <string name="write_dialog_over_btn_positive">Yes</string>
    <string name="write_dialog_over_btn_negative">No</string>
    <string name="write_toast_file_overwritten">File has been overwritten</string>
    <string name="write_toast_file_wrote_begin">File</string>
    <string name="write_toast_file_wrote_end">has been successfully written</string>

    <!--Additem to frequency scan resources-->
    <string name="additem_freq_scan_main_title">Add item fo frequency scan task list</string>
    <string name="additem_freq_scan_cycle_checkbox">cycle</string>
    <string name="additem_freq_scan_frequency_from">From (MHz)</string>
    <string name="additem_freq_scan_frequency_to">To (MHz)</string>
    <string name="additem_freq_scan_frequency_step">Step (MHz)</string>
    <string name="additem_freq_scan_time_step">Time step (s)</string>
    <string name="additem_freq_scan_apply_btn_title">Apply</string>
    <string name="additem_freq_scan_toast_frequency_range">Frequency is out of the range 35 Mhz - 4.4 GHz</string>
    <string name="additem_freq_scan_toast_step_incorrect">Frequency step is out of range 1 KHz  - 1 GHz</string>
    <string name="additem_freq_scan_toast_time_incorrect">Time step if out of the range 1 ms - 6 hour</string>
    <string name="additem_freq_scan_toast_from_to">Value from is greater or equal to the value to</string>
    <string name="additem_title_activity_add_item_to_freq_scan">Add item to frequency scan task list</string>
    <string name="additem_freq_scan_msg_parse_error">Some fields are filled incorrect</string>


    <!--Frequency scan fragment-->
    <string name="freq_scan_main_title">Frequency scan mode</string>
    <string name="freq_scan_btn_apply">Apply</string>
    <string name="freq_scan_btn_add_item">Add item</string>
    <string name="freq_scan_btn_read_file">Read</string>
    <string name="freq_scan_btn_write_file">Write</string>
    <string name="freq_scan_list_header_from_frequency">From (Mhz)</string>
    <string name="freq_scan_list_header_to_frequency">To (MHz)</string>
    <string name="freq_scan_list_header_frequency_step">Step (MHz)</string>
    <string name="freq_scan_list_header_time_step">Time step (sec)</string>
    <string name="freq_scan_menu_entry_delete_item">Delete item</string>
    <string name="freq_scan_menu_entry_edit_item">Edit item</string>
    <string name="freq_scan_toast_err_task_list_is_empty">Task list is empty.</string>
    <string name="freq_scan_toast_err_schedule_empty">Frequency scan task list is empty</string>
    <string name="title_activity_set_frequency">SetFrequencyActivity</string>

</resources>
