<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_mode_title"
            android:id="@+id/textView"
            android:layout_weight="2"
            android:layout_gravity="center|left"
            android:textSize="20dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_btn_start"
            android:id="@+id/startProgramBtn"
            android:layout_weight="3"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/linearLayout2"
        android:layout_weight="1"
        android:measureWithLargestChild="true">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scheduleList"
            android:choiceMode="singleChoice" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_btn_read_file"
            android:id="@+id/readFileBtn"
            android:layout_gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_btn_write_file"
            android:id="@+id/writeFileBtn"
            android:layout_gravity="left" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduler_btn_add_item"
            android:id="@+id/addItemBtn"
            android:layout_gravity="left" />
    </LinearLayout>

</LinearLayout>
