<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_horizontal">

    <LinearLayout
        android:id="@+id/actionBarLinearTop"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/actionBarStatusTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_bar_status_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/actionBarStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_bar_status_default"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/darkred"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionBarLinearBottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBarLinearTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/actionBarFrequencyTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/action_bar_frequency_title" />
        <TextView
            android:id="@+id/actionBarFrequencyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/action_bar_frequency_default"
            android:layout_marginLeft="10dp"
            android:textColor="@color/orange"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/action_bar_frequency_units"
            android:layout_marginLeft="5dp" />
    </LinearLayout>


</RelativeLayout>