<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ua.pp.lab101.synthesizercontrol.activity.accessory.AddItemToScheduleActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:text="@string/additem_title_enter_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frequencyText"
        android:layout_alignRight="@+id/frequencyValue"
        android:layout_alignEnd="@+id/frequencyValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/frequencyValue"
        android:layout_below="@+id/frequencyText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additem_title_enter_time"
        android:id="@+id/timeText"
        android:layout_below="@+id/frequencyValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/frequencyText"
        android:layout_alignEnd="@+id/frequencyText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additem_btn_apply"
        android:id="@+id/applyBtn"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/linearLayout"
        android:baselineAligned="false"
        android:layout_below="@+id/timeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additem_tile_hours"
                android:id="@+id/hoursText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/timeValueHours"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additem_title_minutes"
                android:id="@+id/minutesText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/timeValueMinutes"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additem_title_seconds"
                android:id="@+id/secondsText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/timeValueSeconds"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
